--- a/stand.html
+++ b/stand.html
@@ -6,203 +6,144 @@
   <title>Controle de Stande - Soja</title>
   <style>
     body { font-family: Arial, sans-serif; padding: 20px; background: #f4f4f4; }
-    h2 { margin-top: 30px; }
+    h1 { margin-bottom: 20px; }
     .section { background: #fff; padding: 20px; border-radius: 10px; margin-bottom: 20px; }
     label { display: block; margin-top: 10px; font-weight: bold; }
-    input, select, textarea { width: 100%; padding: 8px; margin-top: 5px; }
+    input, select, textarea, button { width: 100%; padding: 8px; margin-top: 5px; }
     .ponto { border: 1px solid #ccc; padding: 15px; border-radius: 10px; margin-top: 20px; background: #fafafa; }
     .linha { display: flex; gap: 10px; margin-top: 10px; }
     .linha input { flex: 1; }
   </style>
-  <script>
-    const talhaoAreas = {
-      "XIG.JAI.B01.T01": 101.35,
-      "XIG.JAI.B01.T02": 232.71,
-      "XIG.JAI.B01.T03": 263.19,
-      "XIG.JAI.B02.T04": 182.29,
-      "XIG.JAI.B02.T05": 281.13,
-      "XIG.JAI.B02.T06": 322.21,
-      "XIG.JAI.B03.T07": 289.34,
-      "XIG.JAI.B03.T08": 190.62,
-      "XIG.JAI.B03.T09": 458.33,
-      "XIG.JAI.B04.T10": 249.21,
-      "XIG.JAI.B05.T11": 320.88,
-      "XIG.JAI.B05.T12": 234.11,
-      "XIG.JAI.B05.T13": 181.34,
-      "XIG.JAI.B04.T14": 301.32,
-      "XIG.JAI.B04.T15": 243.86,
-      "XIG.JAI.B04.T16": 179.15,
-      "XIG.JAI.B05.T17": 239.50,
-      "XIG.JAI.B05.T18": 230.99,
-      "XIG.JAI.B05.T19": 105.76,
-      "XIG.JAI.B06.T20": 52.99,
-      "XIG.JAI.B06.T21": 154.06,
-      "XIG.JAI.B06.T22": 91.23,
-      "XIG.MAM.B01.T01": 213.20,
-      "XIG.MAM.B01.T02": 138.12,
-      "XIG.MAM.B01.T03": 209.32,
-      "XIG.MAM.B02.T04": 85.52,
-      "XIG.NSA.B01.T01": 185.81,
-      "XIG.NSA.B01.T02": 162.25,
-      "XIG.NSA.B01.T03": 185.58,
-      "XIG.NSA.B01.T04": 160.22,
-      "XIG.NSA.B01.T05": 269.38,
-      "XIG.NSA.B02.T06": 247.32,
-      "XIG.NSA.B02.T07": 258.16,
-      "XIG.NSA.B02.T08": 342.79,
-      "XIG.NSA.B02.T09": 269.56,
-      "XIG.SO1.B01.T01": 331.02,
-      "XIG.SO1.B01.T02": 298.14,
-      "XIG.SO1.B01.T03": 246.06,
-      "XIG.SO1.B03.T04": 268.74,
-      "XIG.SO1.B03.T05": 200.82,
-      "XIG.SO1.B02.T06": 404.92,
-      "XIG.SO1.B02.T07": 275.67,
-      "XIG.SO2.B01.T01": 189.04,
-      "XIG.SO2.B02.T02": 217.93,
-      "XIG.SO2.B02.T03": 295.56,
-      "XIG.SO2.B01.T04": 346.18,
-      "XIG.SO2.B01.T05": 213.62,
-      "XIG.SO2.B03.T06": 166.29,
-      "XIG.SO2.B03.T07": 303.40,
-      "XIG.STE.B01.T01": 124.68,
-      "XIG.STE.B02.T02": 303.20,
-      "XIG.STE.B03.T03": 300.19,
-      "XIG.STE.B03.T04": 365.53,
-      "XIG.STE.B02.T05": 281.90,
-      "XIG.STE.B02.T06": 180.08
-    };
-
-    function selecionarArea() {
-      const t = document.getElementById('talhao').value;
-      if (talhaoAreas[t] !== undefined) {
-        document.getElementById('area').value = talhaoAreas[t];
-        calcularPontos();
-      }
-    }
-
-    function calcularPontos() {
-      const area = parseFloat(document.getElementById('area').value) || 0;
-      const pontos = Math.max(1, Math.ceil(area / 40));
-      document.getElementById('qtdPontos').value = pontos;
-      gerarPontos(pontos);
-    }
-
-    function gerarPontos(qtd) {
-      const container = document.getElementById('pontosContainer');
-      container.innerHTML = '';
-      for (let i = 1; i <= qtd; i++) {
-        const div = document.createElement('div');
-        div.className = 'ponto';
-        div.innerHTML = `
-          <h3>Ponto ${i}</h3>
-          <label>Contagem de plantas (5 linhas de 5 metros)</label>
-          <div class=\"linha\">
-            <input type=\"number\" placeholder=\"Linha 1\" />
-            <input type=\"number\" placeholder=\"Linha 2\" />
-            <input type=\"number\" placeholder=\"Linha 3\" />
-            <input type=\"number\" placeholder=\"Linha 4\" />
-            <input type=\"number\" placeholder=\"Linha 5\" />
-          </div>
-          <label>Fotos (máx. 5 / até 10MB cada)</label>
-          <input type=\"file\" accept=\"image/*\" multiple onchange=\"validarFotos(this)\" />
-          <label>Observações - Daninhas</label>
-          <textarea rows=\"3\"></textarea>
-          <label>Observações - Pragas e Doenças</label>
-          <textarea rows=\"3\"></textarea>
-          <label>Observações - Nódulos</label>
-          <textarea rows=\"3\"></textarea>`;
-        container.appendChild(div);
-      }
-    }
-
-    function validarFotos(input) {
-      if (input.files.length > 5) {
-        alert('Máximo de 5 fotos');
-        input.value = '';
-        return;
-      }
-      for (let f of input.files) {
-        if (f.size > 10 * 1024 * 1024) {
-          alert('Cada foto deve ter no máximo 10MB');
-          input.value = '';
-          return;
-        }
-      }
-    }
-  </script>
 </head>
 <body>
   <h1>Formulário de Controle de Stande - Soja</h1>
 
   <div class="section">
+    <label>Responsável Técnico</label>
+    <input type="text" id="responsavel" placeholder="Digite o nome" />
+
     <label>Talhão</label>
-    <select id="talhao" onchange="selecionarArea()">
-      <option value="">Selecione...</option>
-      <option value="XIG.JAI.B01.T01">XIG.JAI.B01.T01</option>
-      <option value="XIG.JAI.B01.T02">XIG.JAI.B01.T02</option>
-      <option value="XIG.JAI.B01.T03">XIG.JAI.B01.T03</option>
-      <option value="XIG.JAI.B02.T04">XIG.JAI.B02.T04</option>
-      <option value="XIG.JAI.B02.T05">XIG.JAI.B02.T05</option>
-      <option value="XIG.JAI.B02.T06">XIG.JAI.B02.T06</option>
-      <option value="XIG.JAI.B03.T07">XIG.JAI.B03.T07</option>
-      <option value="XIG.JAI.B03.T08">XIG.JAI.B03.T08</option>
-      <option value="XIG.JAI.B03.T09">XIG.JAI.B03.T09</option>
-      <option value="XIG.JAI.B04.T10">XIG.JAI.B04.T10</option>
-      <option value="XIG.JAI.B05.T11">XIG.JAI.B05.T11</option>
-      <option value="XIG.JAI.B05.T12">XIG.JAI.B05.T12</option>
-      <option value="XIG.JAI.B05.T13">XIG.JAI.B05.T13</option>
-      <option value="XIG.JAI.B04.T14">XIG.JAI.B04.T14</option>
-      <option value="XIG.JAI.B04.T15">XIG.JAI.B04.T15</option>
-      <option value="XIG.JAI.B04.T16">XIG.JAI.B04.T16</option>
-      <option value="XIG.JAI.B05.T17">XIG.JAI.B05.T17</option>
-      <option value="XIG.JAI.B05.T18">XIG.JAI.B05.T18</option>
-      <option value="XIG.JAI.B05.T19">XIG.JAI.B05.T19</option>
-      <option value="XIG.JAI.B06.T20">XIG.JAI.B06.T20</option>
-      <option value="XIG.JAI.B06.T21">XIG.JAI.B06.T21</option>
-      <option value="XIG.JAI.B06.T22">XIG.JAI.B06.T22</option>
-      <option value="XIG.MAM.B01.T01">XIG.MAM.B01.T01</option>
-      <option value="XIG.MAM.B01.T02">XIG.MAM.B01.T02</option>
-      <option value="XIG.MAM.B01.T03">XIG.MAM.B01.T03</option>
-      <option value="XIG.MAM.B02.T04">XIG.MAM.B02.T04</option>
-      <option value="XIG.NSA.B01.T01">XIG.NSA.B01.T01</option>
-      <option value="XIG.NSA.B01.T02">XIG.NSA.B01.T02</option>
-      <option value="XIG.NSA.B01.T03">XIG.NSA.B01.T03</option>
-      <option value="XIG.NSA.B01.T04">XIG.NSA.B01.T04</option>
-      <option value="XIG.NSA.B01.T05">XIG.NSA.B01.T05</option>
-      <option value="XIG.NSA.B02.T06">XIG.NSA.B02.T06</option>
-      <option value="XIG.NSA.B02.T07">XIG.NSA.B02.T07</option>
-      <option value="XIG.NSA.B02.T08">XIG.NSA.B02.T08</option>
-      <option value="XIG.NSA.B02.T09">XIG.NSA.B02.T09</option>
-      <option value="XIG.SO1.B01.T01">XIG.SO1.B01.T01</option>
-      <option value="XIG.SO1.B01.T02">XIG.SO1.B01.T02</option>
-      <option value="XIG.SO1.B01.T03">XIG.SO1.B01.T03</option>
-      <option value="XIG.SO1.B03.T04">XIG.SO1.B03.T04</option>
-      <option value="XIG.SO1.B03.T05">XIG.SO1.B03.T05</option>
-      <option value="XIG.SO1.B02.T06">XIG.SO1.B02.T06</option>
-      <option value="XIG.SO1.B02.T07">XIG.SO1.B02.T07</option>
-      <option value="XIG.SO2.B01.T01">XIG.SO2.B01.T01</option>
-      <option value="XIG.SO2.B02.T02">XIG.SO2.B02.T02</option>
-      <option value="XIG.SO2.B02.T03">XIG.SO2.B02.T03</option>
-      <option value="XIG.SO2.B01.T04">XIG.SO2.B01.T04</option>
-      <option value="XIG.SO2.B01.T05">XIG.SO2.B01.T05</option>
-      <option value="XIG.SO2.B03.T06">XIG.SO2.B03.T06</option>
-      <option value="XIG.SO2.B03.T07">XIG.SO2.B03.T07</option>
-      <option value="XIG.STE.B01.T01">XIG.STE.B01.T01</option>
-      <option value="XIG.STE.B02.T02">XIG.STE.B02.T02</option>
-      <option value="XIG.STE.B03.T03">XIG.STE.B03.T03</option>
-      <option value="XIG.STE.B03.T04">XIG.STE.B03.T04</option>
-      <option value="XIG.STE.B02.T05">XIG.STE.B02.T05</option>
-      <option value="XIG.STE.B02.T06">XIG.STE.B02.T06</option>
-    </select>
+    <select id="talhao"></select>
 
-    <label>Área do talhão (ha)</label> (ha)</label>
-    <input type="number" id="area" oninput="calcularPontos()" />
+    <label>Área do talhão (ha)</label>
+    <input type="number" id="area" readonly />
 
-    <label>Quantidade de pontos a serem avaliados</label>
+    <label>Quantidade de pontos calculados</label>
     <input type="number" id="qtdPontos" readonly />
   </div>
 
   <div id="pontosContainer"></div>
+
+  <button onclick="gerarPDF()">Gerar Relatório em PDF</button>
+
+<script>
+const talhaoAreas = {
+  "XIG.JAI.B01.T01": 101.35,"XIG.JAI.B01.T02": 232.71,"XIG.JAI.B01.T03": 263.19,
+  "XIG.JAI.B02.T04": 182.29,"XIG.JAI.B02.T05": 281.13,"XIG.JAI.B02.T06": 322.21,
+  "XIG.JAI.B03.T07": 289.34,"XIG.JAI.B03.T08": 190.62,"XIG.JAI.B03.T09": 458.33,
+  "XIG.JAI.B04.T10": 249.21,"XIG.JAI.B05.T11": 320.88,"XIG.JAI.B05.T12": 234.11,
+  "XIG.JAI.B05.T13": 181.34,"XIG.JAI.B04.T14": 301.32,"XIG.JAI.B04.T15": 243.86,
+  "XIG.JAI.B04.T16": 179.15,"XIG.JAI.B05.T17": 239.50,"XIG.JAI.B05.T18": 230.99,
+  "XIG.JAI.B05.T19": 105.76,"XIG.JAI.B06.T20": 52.99,"XIG.JAI.B06.T21": 154.06,
+  "XIG.JAI.B06.T22": 91.23,"XIG.MAM.B01.T01": 213.20,"XIG.MAM.B01.T02": 138.12,
+  "XIG.MAM.B01.T03": 209.32,"XIG.MAM.B02.T04": 85.52,"XIG.NSA.B01.T01": 185.81,
+  "XIG.NSA.B01.T02": 162.25,"XIG.NSA.B01.T03": 185.58,"XIG.NSA.B01.T04": 160.22,
+  "XIG.NSA.B01.T05": 269.38,"XIG.NSA.B02.T06": 247.32,"XIG.NSA.B02.T07": 258.16,
+  "XIG.NSA.B02.T08": 342.79,"XIG.NSA.B02.T09": 269.56,"XIG.SO1.B01.T01": 331.02,
+  "XIG.SO1.B01.T02": 298.14,"XIG.SO1.B01.T03": 246.06,"XIG.SO1.B03.T04": 268.74,
+  "XIG.SO1.B03.T05": 200.82,"XIG.SO1.B02.T06": 404.92,"XIG.SO1.B02.T07": 275.67,
+  "XIG.SO2.B01.T01": 189.04,"XIG.SO2.B02.T02": 217.93,"XIG.SO2.B02.T03": 295.56,
+  "XIG.SO2.B01.T04": 346.18,"XIG.SO2.B01.T05": 213.62,"XIG.SO2.B03.T06": 166.29,
+  "XIG.SO2.B03.T07": 303.40,"XIG.STE.B01.T01": 124.68,"XIG.STE.B02.T02": 303.20,
+  "XIG.STE.B03.T03": 300.19,"XIG.STE.B03.T04": 365.53,"XIG.STE.B02.T05": 281.90,
+  "XIG.STE.B02.T06": 180.08
+};
+
+window.onload = () => {
+  const select = document.getElementById('talhao');
+  Object.keys(talhaoAreas).forEach(t => {
+    const opt = document.createElement('option');
+    opt.value = t;
+    opt.textContent = t;
+    select.appendChild(opt);
+  });
+  select.onchange = selecionarArea;
+};
+
+function selecionarArea() {
+  const t = talhao.value;
+  area.value = talhaoAreas[t] || 0;
+  calcularPontos();
+}
+
+function calcularPontos() {
+  const areaVal = parseFloat(area.value) || 0;
+  const pontos = Math.max(1, Math.ceil(areaVal / 40));
+  qtdPontos.value = pontos;
+  gerarPontos(pontos);
+}
+
+function gerarPontos(qtd) {
+  pontosContainer.innerHTML = '';
+  for (let i = 1; i <= qtd; i++) {
+    const div = document.createElement('div');
+    div.className = 'ponto';
+
+    div.innerHTML = `
+      <h3>Ponto ${i}</h3>
+
+      <button onclick="capturarCoordenada(${i})">Registrar Coordenada</button>
+      <label>Latitude</label>
+      <input id="lat_${i}" readonly>
+      <label>Longitude</label>
+      <input id="lon_${i}" readonly>
+
+      <label>Contagem de plantas (5 linhas de 5 metros)</label>
+      <div class="linha">
+        <input id="l1_${i}" type="number" placeholder="Linha 1" oninput="calcularMedia(${i})">
+        <input id="l2_${i}" type="number" placeholder="Linha 2" oninput="calcularMedia(${i})">
+        <input id="l3_${i}" type="number" placeholder="Linha 3" oninput="calcularMedia(${i})">
+        <input id="l4_${i}" type="number" placeholder="Linha 4" oninput="calcularMedia(${i})">
+        <input id="l5_${i}" type="number" placeholder="Linha 5" oninput="calcularMedia(${i})">
+      </div>
+
+      <label>Média por metro linear</label>
+      <input id="media_${i}" readonly>
+
+      <label>Fotos (máx. 5 / até 10MB cada)</label>
+      <input type="file" accept="image/*" multiple onchange="validarFotos(this)">
+
+      <label>Observações - Daninhas</label>
+      <textarea id="obs_dan_${i}" rows="3"></textarea>
+
+      <label>Observações - Pragas e Doenças</label>
+      <textarea id="obs_prag_${i}" rows="3"></textarea>
+
+      <label>Observações - Nódulos</label>
+      <textarea id="obs_nod_${i}" rows="3"></textarea>
+    `;
+    pontosContainer.appendChild(div);
+  }
+}
+
+function capturarCoordenada(i) {
+  navigator.geolocation.getCurrentPosition(pos => {
+    document.getElementById(`lat_${i}`).value = pos.coords.latitude;
+    document.getElementById(`lon_${i}`).value = pos.coords.longitude;
+  });
+}
+
+function calcularMedia(i) {
+  let soma = 0;
+  for (let n = 1; n <= 5; n++) soma += Number(document.getElementById(`l${n}_${i}`).value) || 0;
+  let media = soma / 25;
+  document.getElementById(`media_${i}`).value = media.toFixed(2);
+}
+
+function gerarPDF() {
+  alert("Aqui será gerado o PDF (integração pronta para adicionar).");
+}
+</script>
+
 </body>
 </html>
