--- a/stand.html
+++ b/stand.html
@@ -26,7 +26,7 @@
     <select id="talhao"></select>
 
     <label>Área do talhão (ha)</label>
-    <input type="number" id="area" readonly />
+    <input type="number" id="area" readonly placeholder="Área preenchida automaticamente" />
 
     <label>Quantidade de pontos calculados</label>
     <input type="number" id="qtdPontos" readonly />
