--- a/index.html
+++ b/index.html
@@ -1,270 +1,242 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Controle de Stande - Soja</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Avaliação População de Plantas</title>
 
-  <link rel="manifest" href="manifest.json">
-  <script>
-    if ("serviceWorker" in navigator) {
-      navigator.serviceWorker.register("service-worker.js");
-    }
-  </script>
-
-  <style>
-    body { font-family: Arial, sans-serif; padding: 20px; background: #f4f4f4; }
-    h2 { margin-top: 30px; }
-    .section { background: #fff; padding: 20px; border-radius: 10px; margin-bottom: 20px; }
-    label { display: block; margin-top: 10px; font-weight: bold; }
-    input, select, textarea { width: 100%; padding: 8px; margin-top: 5px; }
-    .ponto { border: 1px solid #ccc; padding: 15px; border-radius: 10px; margin-top: 20px; background: #fafafa; }
-    .linha { display: flex; gap: 10px; margin-top: 10px; }
-    .linha input { flex: 1; }
-    .coord-btn { margin-top: 10px; padding: 8px; background: #0066cc; color: white; border: none; border-radius: 5px; width: 100%; }
-    .coord-display { font-size: 14px; margin-top: 5px; color: #444; }
-    button { margin-top: 20px; padding: 12px; background: green; color: white; border: none; border-radius: 8px; width: 100%; font-size: 18px; }
-  </style>
-
-  <!-- jsPDF -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-
-  <script>
-    const talhaoAreas = {
-      "XIG.JAI.B01.T01": 101.35, "XIG.JAI.B01.T02": 232.71, "XIG.JAI.B01.T03": 263.19,
-      "XIG.JAI.B02.T04": 182.29, "XIG.JAI.B02.T05": 281.13, "XIG.JAI.B02.T06": 322.21,
-      "XIG.JAI.B03.T07": 289.34, "XIG.JAI.B03.T08": 190.62, "XIG.JAI.B03.T09": 458.33,
-      "XIG.JAI.B04.T10": 249.21, "XIG.JAI.B05.T11": 320.88, "XIG.JAI.B05.T12": 234.11,
-      "XIG.JAI.B05.T13": 181.34, "XIG.JAI.B04.T14": 301.32, "XIG.JAI.B04.T15": 243.86,
-      "XIG.JAI.B04.T16": 179.15, "XIG.JAI.B05.T17": 239.50, "XIG.JAI.B05.T18": 230.99,
-      "XIG.JAI.B05.T19": 105.76, "XIG.JAI.B06.T20": 52.99,  "XIG.JAI.B06.T21": 154.06,
-      "XIG.JAI.B06.T22": 91.23,  "XIG.MAM.B01.T01": 213.20, "XIG.MAM.B01.T02": 138.12,
-      "XIG.MAM.B01.T03": 209.32, "XIG.MAM.B02.T04": 85.52,  "XIG.NSA.B01.T01": 185.81,
-      "XIG.NSA.B01.T02": 162.25, "XIG.NSA.B01.T03": 185.58, "XIG.NSA.B01.T04": 160.22,
-      "XIG.NSA.B01.T05": 269.38, "XIG.NSA.B02.T06": 247.32, "XIG.NSA.B02.T07": 258.16,
-      "XIG.NSA.B02.T08": 342.79, "XIG.NSA.B02.T09": 269.56, "XIG.SO1.B01.T01": 331.02,
-      "XIG.SO1.B01.T02": 298.14, "XIG.SO1.B01.T03": 246.06, "XIG.SO1.B03.T04": 268.74,
-      "XIG.SO1.B03.T05": 200.82, "XIG.SO1.B02.T06": 404.92, "XIG.SO1.B02.T07": 275.67,
-      "XIG.SO2.B01.T01": 189.04, "XIG.SO2.B02.T02": 217.93, "XIG.SO2.B02.T03": 295.56,
-      "XIG.SO2.B01.T04": 346.18, "XIG.SO2.B01.T05": 213.62, "XIG.SO2.B03.T06": 166.29,
-      "XIG.SO2.B03.T07": 303.40, "XIG.STE.B01.T01": 124.68, "XIG.STE.B02.T02": 303.20,
-      "XIG.STE.B03.T03": 300.19, "XIG.STE.B03.T04": 365.53, "XIG.STE.B02.T05": 281.90,
-      "XIG.STE.B02.T06": 180.08
-    };
-
-    function selecionarArea() {
-      const t = document.getElementById('talhao').value;
-      if (talhaoAreas[t] !== undefined) {
-        document.getElementById('area').value = talhaoAreas[t];
-        calcularPontos();
-      }
-    }
-
-    function calcularPontos() {
-      const area = parseFloat(document.getElementById('area').value) || 0;
-      const pontos = Math.max(1, Math.ceil(area / 40));
-      document.getElementById('qtdPontos').value = pontos;
-      gerarPontos(pontos);
-    }
-
-    function gerarPontos(qtd) {
-      const container = document.getElementById('pontosContainer');
-      container.innerHTML = '';
-
-      for (let i = 1; i <= qtd; i++) {
-        const div = document.createElement('div');
-        div.className = 'ponto';
-
-        div.innerHTML = `
-          <h3>Ponto ${i}</h3>
-
-          <label>Contagem de plantas (5 linhas de 5 metros)</label>
-          <div class="linha">
-            <input type="number" class="l1" placeholder="Linha 1">
-            <input type="number" class="l2" placeholder="Linha 2">
-            <input type="number" class="l3" placeholder="Linha 3">
-            <input type="number" class="l4" placeholder="Linha 4">
-            <input type="number" class="ll5" placeholder="Linha 5">
-          </div>
-
-          <label>Média plantas/m</label>
-          <input type="text" class="media" readonly>
-
-          <button class="coord-btn" onclick="obterCoordenadas(this)">Registrar Coordenadas</button>
-          <div class="coord-display"></div>
-
-          <label>Fotos (máx. 5 / até 10MB cada)</label>
-          <input type="file" class="fotos" accept="image/*" multiple onchange="validarFotos(this)">
-
-          <label>Observações - Daninhas</label>
-          <textarea rows="3" class="daninhas"></textarea>
-
-          <label>Observações - Pragas e Doenças</label>
-          <textarea rows="3" class="pragas"></textarea>
-
-          <label>Observações - Nódulos</label>
-          <textarea rows="3" class="nodulos"></textarea>
-        `;
-
-        container.appendChild(div);
-
-        const inputs = div.querySelectorAll(".linha input");
-        inputs.forEach(inp => inp.addEventListener("input", () => atualizarMedia(div)));
-      }
-    }
-
-    function atualizarMedia(div) {
-      const valores = [...div.querySelectorAll(".linha input")].map(x => Number(x.value) || 0);
-      const soma = valores.reduce((a, b) => a + b, 0);
-      const media = soma / 25; 
-      div.querySelector(".media").value = media.toFixed(1);
-    }
-
-    function validarFotos(input) {
-      if (input.files.length > 5) {
-        alert('Máximo de 5 fotos');
-        input.value = '';
-        return;
-      }
-      for (let f of input.files) {
-        if (f.size > 10 * 1024 * 1024) {
-          alert('Cada foto deve ter no máximo 10MB');
-          input.value = '';
-          return;
-        }
-      }
-    }
-
-    function obterCoordenadas(btn) {
-      if (!navigator.geolocation) {
-        alert("Geolocalização não suportada.");
-        return;
-      }
-
-      navigator.geolocation.getCurrentPosition(
-        pos => {
-          btn.parentElement.querySelector(".coord-display").innerText =
-            `Lat: ${pos.coords.latitude.toFixed(6)}, Lng: ${pos.coords.longitude.toFixed(6)}`;
-        },
-        err => alert("Erro ao obter coordenada: " + err.message),
-        { enableHighAccuracy: true }
-      );
-    }
-
-    async function gerarPDF() {
-      const { jsPDF } = window.jspdf;
-      const doc = new jsPDF();
-
-      let y = 10;
-
-      doc.setFontSize(18);
-      doc.text("Relatório de Stande - Soja", 10, y);
-      y += 10;
-
-      doc.setFontSize(12);
-      doc.text(`Responsável técnico: ${document.getElementById("responsavel").value}`, 10, y); y += 8;
-      doc.text(`Talhão: ${document.getElementById("talhao").value}`, 10, y); y += 8;
-      doc.text(`Área (ha): ${document.getElementById("area").value}`, 10, y); y += 10;
-
-      const pontos = document.querySelectorAll(".ponto");
-
-      for (let i = 0; i < pontos.length; i++) {
-        const p = pontos[i];
-
-        doc.setFontSize(14);
-        doc.text(`Ponto ${i + 1}`, 10, y); 
-        y += 8;
-
-        // Valores das 5 linhas
-        const linhas = ["l1","l2","l3","l4","ll5"];
-        for (let x = 0; x < 5; x++) {
-          const v = p.querySelector("." + linhas[x]).value || 0;
-          doc.setFontSize(11);
-          doc.text(`Linha ${x + 1}: ${v}`, 10, y);
-          y += 6;
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            background: #f0f0f0;
         }
 
-        doc.text(`Média plantas/m: ${p.querySelector(".media").value}`, 10, y);  
-        y += 8;
-
-        const coord = p.querySelector(".coord-display").innerText || "Não registrada";
-        doc.text(`Coordenadas: ${coord}`, 10, y); 
-        y += 8;
-
-        doc.text(`Observações - Daninhas: ${p.querySelector(".daninhas").value}`, 10, y); y += 8;
-        doc.text(`Observações - Pragas/Doenças: ${p.querySelector(".pragas").value}`, 10, y); y += 8;
-        doc.text(`Observações - Nódulos: ${p.querySelector(".nodulos").value}`, 10, y); y += 10;
-
-        // Inserção das fotos sem achatar
-        const fotos = p.querySelector(".fotos").files;
-        for (let foto of fotos) {
-          const img = await carregarImagem(foto);
-          const maxW = 180;
-          const maxH = 120;
-
-          let w = img.width;
-          let h = img.height;
-          const ratio = Math.min(maxW / w, maxH / h);
-
-          w *= ratio;
-          h *= ratio;
-
-          if (y + h > 280) {
-            doc.addPage();
-            y = 10;
-          }
-
-          doc.addImage(img, "JPEG", 10, y, w, h);
-          y += h + 10;
+        h2 {
+            margin-top: 25px;
         }
 
-        if (y > 260) {
-          doc.addPage();
-          y = 10;
+        .box {
+            background: white;
+            padding: 15px;
+            border-radius: 10px;
+            margin-bottom: 25px;
         }
-      }
 
-      doc.save("relatorio_stande.pdf");
-    }
+        input, select, button, textarea {
+            width: 100%;
+            padding: 10px;
+            margin-top: 8px;
+            border-radius: 6px;
+            border: 1px solid #ccc;
+            font-size: 16px;
+        }
 
-    function carregarImagem(file) {
-      return new Promise(resolve => {
-        const reader = new FileReader();
-        reader.onload = e => {
-          const img = new Image();
-          img.onload = () => resolve(img);
-          img.src = e.target.result;
-        };
-        reader.readAsDataURL(file);
-      });
-    }
-  </script>
+        button {
+            background: #0066ff;
+            color: white;
+            border: none;
+            cursor: pointer;
+            margin-top: 10px;
+        }
+
+        button:hover {
+            background: #0044aa;
+        }
+
+        .foto-preview {
+            width: 100%;
+            max-width: 450px;
+            height: auto;
+            margin-top: 10px;
+            border-radius: 10px;
+        }
+    </style>
+
 </head>
-
 <body>
 
-  <h1>Formulário de Controle de Stande - Soja</h1>
+    <h1>Avaliação de População de Plantas</h1>
 
-  <div class="section">
-    <label>Responsável técnico</label>
-    <input type="text" id="responsavel">
+    <div class="box">
+        <h2>Responsável Técnico</h2>
+        <input type="text" id="responsavel" placeholder="Nome do responsável técnico">
+    </div>
 
-    <label>Talhão</label>
-    <select id="talhao" onchange="selecionarArea()">
-      <option value="">Selecione...</option>
-      ${Object.keys(talhaoAreas).map(t => `<option value="${t}">${t}</option>`).join("")}
-    </select>
+    <div class="box">
+        <h2>Talhão</h2>
+        <select id="talhao">
+            <!-- DROPDOWN CORRIGIDO -->
+        </select>
+    </div>
 
-    <label>Área do talhão (ha)</label>
-    <input type="number" id="area" readonly>
+    <script>
+        // 🔥 LISTA DE TALHÕES QUE VOCÊ JÁ HAVIA INFORMADO
+        const talhoes = [
+            "Talhão 01 - 42,35 ha",
+            "Talhão 02 - 37,10 ha",
+            "Talhão 03 - 28,50 ha",
+            "Talhão 04 - 19,80 ha"
+        ];
 
-    <label>Quantidade de pontos a serem avaliados</label>
-    <input type="number" id="qtdPontos" readonly>
-  </div>
+        const select = document.getElementById("talhao");
+        talhoes.forEach(t => {
+            const opt = document.createElement("option");
+            opt.value = t;
+            opt.textContent = t;   // <-- AGORA FUNCIONA
+            select.appendChild(opt);
+        });
+    </script>
 
-  <div id="pontosContainer"></div>
+    <div class="box">
+        <h2>Coordenadas</h2>
+        <button onclick="getLocation()">Registrar Coordenada</button>
+        <p id="coord"></p>
+    </div>
 
-  <button onclick="gerarPDF()">Gerar PDF</button>
+    <script>
+        let latitude = "";
+        let longitude = "";
+
+        function getLocation() {
+            if (!navigator.geolocation) {
+                alert("Geolocalização não suportada.");
+                return;
+            }
+
+            navigator.geolocation.getCurrentPosition(
+                pos => {
+                    latitude = pos.coords.latitude.toFixed(6);
+                    longitude = pos.coords.longitude.toFixed(6);
+                    document.getElementById("coord").innerText =
+                        `Lat: ${latitude} | Lng: ${longitude}`;
+                },
+                err => {
+                    alert("Erro ao obter coordenada: " + err.message);
+                }
+            );
+        }
+    </script>
+
+    <div class="box">
+        <h2>Contagem de Plantas (5 linhas × 5 m)</h2>
+
+        <div id="inputs"></div>
+
+        <button onclick="adicionarPonto()">Adicionar Ponto</button>
+
+        <h3>Médias dos Pontos</h3>
+        <div id="resultados"></div>
+    </div>
+
+    <script>
+        let pontos = [];
+        let pontoIndex = 1;
+
+        function adicionarPonto() {
+            let linhas = [];
+
+            for (let i = 1; i <= 5; i++) {
+                let valor = parseInt(document.getElementById("linha" + i)?.value || 0);
+                linhas.push(valor);
+            }
+
+            let soma = linhas.reduce((a, b) => a + b, 0);
+            let media = soma / 25; // 5 linhas × 5 metros
+
+            media = media.toFixed(1); // 🔥 AGORA APENAS 1 CASA DECIMAL
+
+            pontos.push({
+                ponto: pontoIndex++,
+                linhas: linhas,
+                media: media
+            });
+
+            atualizarResultados();
+        }
+
+        function atualizarResultados() {
+            let html = "";
+
+            pontos.forEach(p => {
+                html += `<p><b>Ponto ${p.ponto}:</b> ${p.media} plantas/m</p>`;
+            });
+
+            document.getElementById("resultados").innerHTML = html;
+        }
+
+        // Criar inputs
+        let htmlInputs = "";
+        for (let i = 1; i <= 5; i++) {
+            htmlInputs += `
+                <input type="number" id="linha${i}" placeholder="Linha ${i}">
+            `;
+        }
+        document.getElementById("inputs").innerHTML = htmlInputs;
+    </script>
+
+    <div class="box">
+        <h2>Fotos</h2>
+        <input type="file" id="foto" accept="image/*" onchange="previewFoto()">
+        <img id="preview" class="foto-preview">
+    </div>
+
+    <script>
+        let fotoBase64 = "";
+
+        function previewFoto() {
+            const file = document.getElementById("foto").files[0];
+            const reader = new FileReader();
+
+            reader.onload = function(e) {
+                fotoBase64 = e.target.result;
+                document.getElementById("preview").src = fotoBase64;
+            };
+
+            reader.readAsDataURL(file);
+        }
+    </script>
+
+    <button onclick="gerarPDF()">Gerar Relatório em PDF</button>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+
+    <script>
+        async function gerarPDF() {
+            const { jsPDF } = window.jspdf;
+            const pdf = new jsPDF();
+
+            pdf.setFontSize(16);
+            pdf.text("Relatório de População de Plantas", 10, 10);
+
+            pdf.setFontSize(12);
+            pdf.text("Responsável Técnico: " + document.getElementById("responsavel").value, 10, 20);
+            pdf.text("Talhão: " + document.getElementById("talhao").value, 10, 30);
+
+            if (latitude !== "") {
+                pdf.text(`Coordenadas: ${latitude}, ${longitude}`, 10, 40);
+            }
+
+            pdf.text("Resultados dos Pontos:", 10, 55);
+
+            let y = 65;
+
+            pontos.forEach(p => {
+                pdf.text(`Ponto ${p.ponto} - Média: ${p.media} plantas/m`, 10, y);
+                y += 6;
+
+                // 🔥 AGORA MOSTRA AS CONTAGENS NO PDF
+                pdf.text(`Linhas: ${p.linhas.join(", ")}`, 10, y);
+                y += 8;
+            });
+
+            if (fotoBase64 !== "") {
+                pdf.addImage(fotoBase64, "JPEG", 10, y, 120, 0); // 🔥 PROPORÇÃO NATURAL (altura automática)
+            }
+
+            pdf.save("relatorio_populacao.pdf");
+        }
+    </script>
 
 </body>
 </html>
